workloads/demo-whoami/001-deployment.yaml
# Deployment
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: demo
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami-container
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
