workloads/demo-whoami/002-service.yaml
# Service
---
kind: Service
apiVersion: v1
metadata:
  name: whoami
  namespace: demo

spec:
  #  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      name: web
  selector:
    app: whoami
