workloads/demo-whoami/003-ingress.yaml
# IngresRoute http
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: whoami
  namespace: demo
  annotations:
    "traefik.ingress.kubernetes.io/router.middlewares": "traefik-https-redirect@kubernetescrd"

spec:
  rules:
    - host: "whoami.docwhat.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: whoami
              servicePort: 80
